--- a/Abril_Clinica/AbrilClinica.Entities.csproj
+++ b/Abril_Clinica/AbrilClinica.Entities.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Firestore" Version="3.2.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
 </Project>
